ansible/files/istio/virtualservice-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway
spec:
  hosts:
  - "*"
  gateways:
  - coolstore-ingress
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        port:
          number: 8080
        host: gateway
        subset: type-spring
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: web
